--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "c8 node ./src/test.js"
+    "test": "time -p node ./src/test",
+    "debug": "node --inspect-brk ./src/test.js",
+    "c8": "c8 npm t"
   },
   "repository": {
     "type": "git",
@@ -19,13 +21,16 @@
   "homepage": "https://github.com/semantic-machines/veda-client#readme",
   "devDependencies": {
     "baretest": "^2.0.0",
+    "c8": "^7.13.0",
     "eslint": "^8.35.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-security-node": "^1.1.1",
-    "c8": "^7.13.0"
+    "eslint-plugin-security-node": "^1.1.1"
+  },
+  "dependencies": {
+    "deep-object-diff": "^1.1.9"
   }
 }
