--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "time -p node --expose-gc test",
-    "debug": "node --inspect-brk ./src/test",
+    "debug": "node --inspect-brk test",
     "c8": "c8 npm t",
     "build": "esbuild `find src \\( -name '*.js' \\)` --minify --platform=node --outdir=dist"
   },
