--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "time -p node --expose-gc test",
     "debug": "node --inspect-brk test",
     "c8": "c8 npm t",
-    "build": "esbuild `find src \\( -name '*.js' \\)` --minify --platform=neutral --outdir=dist"
+    "minify": "esbuild `find src \\( -name '*.js' \\)` --minify --platform=neutral --outdir=dist",
+    "build": "esbuild ./src/index.js --minify --bundle --platform=neutral --outdir=dist"
   },
   "repository": {
     "type": "git",
