--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-security-node": "^1.1.1",
+    "eslint-plugin-security-node": "^1.1.1"
+  },
+  "dependencies": {
     "isomorphic-ws": "^5.0.0"
   }
 }
