--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "test": "time -p node --expose-gc test",
     "debug": "node --inspect-brk test",
     "c8": "time -p c8 node --expose-gc test",
-    "minify": "esbuild `find src \\( -name '*.js' \\)` --minify --platform=node --outdir=dist",
-    "build": "esbuild ./src/index.js --minify --sourcemap --bundle --platform=node --outdir=dist"
+    "build": "node build-lib.mjs",
+    "watch": "node watch-lib.mjs",
+    "build-app": "node build-app.mjs",
+    "watch-app": "node watch-app.mjs"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "baretest": "^2.0.0",
     "c8": "^10.1.2",
     "esbuild": "^0.24.0",
+    "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9.14.0",
     "globals": "^15.11.0"
   },
