--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "esbuild": "^0.24.0",
     "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9.16.0",
-    "globals": "^15.13.0",
+    "globals": "^15.13.0"
+  },
+  "dependencies": {
     "ws": "^8.18.0"
   }
 }
