--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "veda platform client framework",
   "module": "src/index.js",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "type": "module",
   "scripts": {
-    "test": "time -p node --expose-gc test",
+    "test": "tsc --noEmit && time -p node --expose-gc test",
     "debug": "node --inspect-brk test",
-    "c8": "time -p c8 node --expose-gc test",
+    "c8": "tsc --noEmit && time -p c8 node --expose-gc test",
     "build": "node build.mjs",
-    "watch": "node watch.mjs"
+    "watch": "node watch.mjs",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -23,15 +25,16 @@
   },
   "homepage": "https://github.com/semantic-machines/veda-client#readme",
   "devDependencies": {
-    "@eslint/js": "^9.16.0",
+    "@eslint/js": "^9.37.0",
     "baretest": "^2.0.0",
-    "c8": "^10.1.2",
-    "esbuild": "^0.24.0",
+    "c8": "^10.1.3",
+    "esbuild": "^0.24.2",
     "esbuild-plugin-copy": "^2.1.1",
-    "eslint": "^9.16.0",
-    "globals": "^15.13.0"
+    "eslint": "^9.37.0",
+    "globals": "^15.15.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "ws": "^8.18.0"
+    "ws": "^8.18.3"
   }
 }
