--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9.37.0",
     "globals": "^15.15.0",
+    "linkedom": "^0.18.12",
     "typescript": "^5.9.3"
   },
   "dependencies": {
