test: achieve 97.79% coverage for Component.js with 107 tests
- Add comprehensive test suite for Component.js (107 tests)
- Remove dead code in event handler (lines 536-539)
- Switch from linkedom to jsdom for better DOM API support

Coverage improvements:
- Component.js: 97.79% lines, 100% functions, 87.78% branches
- ExpressionParser.js: 100% (all metrics)
- RelationComponent.js: 93.1%
- ValueComponent.js: 92%
- IfComponent.js: 87.64%

Tests cover:
- Basic instantiation and lifecycle
- Reactive and non-reactive components
- Template processing and expressions
- Event handlers (simple names, expressions, method lookup)
- Reactive attributes (disabled, checked, class, title, data-*)
- Boolean attributes
- Model integration
- Custom and framework components (If, Loop, Property, Relation)
- Inline components and customized built-in elements
- Error handling in lifecycle hooks
- Dynamic method addition
- DOM traversal edge cases
- Auto-detection of reactive state

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "type": "module",
   "scripts": {
     "test": "tsc --noEmit && time -p node --expose-gc test",
+    "test:components": "tsc --noEmit && time -p c8 node --expose-gc test/components-only.js",
     "debug": "node --inspect-brk test",
     "c8": "tsc --noEmit && time -p c8 node --expose-gc test",
     "build": "node build.mjs",
@@ -33,6 +34,7 @@
     "eslint": "^9.37.0",
     "eslint-plugin-sonarjs": "3.0.5",
     "globals": "^15.15.0",
+    "jsdom": "^27.1.0",
     "linkedom": "^0.18.12",
     "typescript": "^5.9.3"
   },
