Improve test coverage and structure
- Split tests into unit (fast, isolated) and integration (with server)
- Add test:unit and test:integration commands
- Increase Model.js coverage from 72% to 98.47%
- Add 21 new unit tests (348 total)
- Create MockBackend and MockWebSocket for isolated testing
- Add test helpers: waitForCondition, waitForValue, clearModelCache, etc.
- Refactor Subscription.js to make internal fields testable
- Add comprehensive tests for Model CRUD, rights, and memberships
- Unit tests now run in ~2.7s without server dependency
- Overall unit test coverage: 90.69%

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "type": "module",
   "scripts": {
     "test": "tsc --noEmit && time -p node --expose-gc test",
+    "test:unit": "tsc --noEmit && time -p node --expose-gc test --unit",
+    "test:integration": "tsc --noEmit && time -p node --expose-gc test --integration",
     "debug": "node --inspect-brk test",
     "c8": "tsc --noEmit && time -p c8 node --expose-gc test",
+    "c8:unit": "tsc --noEmit && time -p c8 node --expose-gc test --unit",
     "build": "node build.mjs",
     "watch": "node watch.mjs",
     "typecheck": "tsc --noEmit"
