Separate performance benchmarks from regular tests
Moved Performance.test.js to test/benchmarks/ directory:
- Benchmarks no longer run with regular tests
- Reduces test time: 455 tests (was 467)
- Unit tests: 362 tests, ~3s
- Integration tests: 93 tests, ~26s
- Benchmarks: 12 tests, ~0.7s

Added new command:
- pnpm test:benchmark - run only performance benchmarks

Test structure:
test/
├── *.test.js       # Unit tests (362)
├── integration/    # Integration tests (93)
├── benchmarks/     # Performance benchmarks (12)
├── mocks/         # Mock implementations
└── helpers.js     # Test utilities

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "tsc --noEmit && time -p node --expose-gc test",
     "test:unit": "tsc --noEmit && time -p node --expose-gc test --unit",
     "test:integration": "tsc --noEmit && time -p node --expose-gc test --integration",
+    "test:benchmark": "time -p node --expose-gc test --benchmark",
     "debug": "node --inspect-brk test",
     "c8": "tsc --noEmit && time -p c8 node --expose-gc test",
     "c8:unit": "tsc --noEmit && time -p c8 node --expose-gc test --unit",
