docs: update installation and imports to use veda-client package
- Add npm/pnpm installation from GitHub repository
- Update all code examples to use 'veda-client' imports instead of relative paths
- Add keywords to package.json for better discoverability
- Keep 'For development' section for framework contributors

Updated files:
- README.md: installation guide and all examples
- REACTIVITY.md: all import statements
- API.md: 40+ code examples across all sections
- package.json: added keywords

--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
     "type": "git",
     "url": "git+https://github.com/semantic-machines/veda-client.git"
   },
+  "keywords": [
+    "reactive",
+    "web-components",
+    "semantic-web",
+    "rdf",
+    "veda",
+    "framework"
+  ],
   "author": "Roman Karpov",
   "license": "MIT",
   "bugs": {
