--- a/devtools/manifest.json
+++ b/devtools/manifest.json
@@ -18,7 +18,8 @@
     }
   ],
   "background": {
-    "service_worker": "src/background.js"
+    "service_worker": "src/background.js",
+    "type": "module"
   },
   "web_accessible_resources": [
     {
