--- a/devtools/manifest.json
+++ b/devtools/manifest.json
@@ -13,17 +13,17 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["src/content-script.js"],
+      "js": ["content-script.js"],
       "run_at": "document_start"
     }
   ],
   "background": {
-    "service_worker": "src/background.js",
+    "service_worker": "background.js",
     "type": "module"
   },
   "web_accessible_resources": [
     {
-      "resources": ["src/hook.js"],
+      "resources": ["hook.js"],
       "matches": ["<all_urls>"]
     }
   ]
