--- a/app-todo/package.json
+++ b/app-todo/package.json
@@ -11,9 +11,7 @@
   },
   "devDependencies": {
     "esbuild": "^0.24.0",
-    "esbuild-plugin-copy": "^2.1.1",
-    "todomvc-app-css": "^2.4.3",
-    "todomvc-common": "^1.0.5"
+    "esbuild-plugin-copy": "^2.1.1"
   }
 }
 
